fixes redundant rules and vertical spacing

--- a/node/src/files/components/semantic/views/items.css
+++ b/node/src/files/components/semantic/views/items.css
@@ -34,22 +34,29 @@
       Item
 ---------------*/
 .ui.items .item {
-  float: left;
   display: block;
+  float: left;
+  position: relative;
+  width: 316px;
+  min-height: 375px;
   margin: 1em 0.5em 2.5em;
   padding: 0em;
-  width: 100%;
-  margin: 0%;
-  font-size: 1em;
+  background-color: #FFFFFF;
   line-height: 1.2;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
+  font-size: 1em;
+  -moz-box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
+  border-bottom: 0.2em solid rgba(0, 0, 0, 0.2);
+  -moz-border-radius: 0.33em;
+  -webkit-border-radius: 0.33em;
+  border-radius: 0.33em;
+  padding: 0.5em;
 }
 .ui.items .item a {
   cursor: pointer;
 }
+.ui.items .item,
 .ui.items .item > .image,
 .ui.items .item > .image .overlay,
 .ui.items .item > .content,
@@ -59,22 +66,6 @@
   -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
   box-sizing: border-box;
-}
-.ui.items .item {
-  display: block;
-  position: relative;
-  width: 316px;
-  min-height: 375px;
-  margin: 1em 0.5em;
-  background-color: #FFFFFF;
-  -moz-box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
-  border-bottom: 0.2em solid rgba(0, 0, 0, 0.2);
-  -moz-border-radius: 0.33em;
-  -webkit-border-radius: 0.33em;
-  border-radius: 0.33em;
-  padding: 0.5em;
 }
 /*--------------
       Images
